--- a/churn.ipynb
+++ b/churn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/ymTt/Hk2o9mNpRLz8Gi8",
+      "authorship_tag": "ABX9TyP7seaZMs4any1BZjl0HIkg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,17 +83,19 @@
         "\n",
         "import pandas as pd\n",
         "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import matplotlib.ticker as mtick"
       ],
       "metadata": {
         "id": "S4aVFy91s4Sg"
       },
-      "execution_count": 1,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 23,
       "metadata": {
         "id": "6rUF_2Mq3TnA"
       },
@@ -134,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gsJmFSHZvlmZ",
-        "outputId": "70b6f61f-64e9-4c1d-cdd7-a66bde7dd95b"
+        "outputId": "4a2511cb-ec8f-413f-f9d6-c4b852913fa2"
       },
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,9 +189,9 @@
           "height": 661
         },
         "id": "4tWyeNUBuFJt",
-        "outputId": "2bee5983-d5c1-43d5-80c7-8458461e3465"
+        "outputId": "698ad3bb-aa4a-4218-cc6e-38dfd5375978"
       },
-      "execution_count": 8,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,7 +266,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c28367ee-f478-40b1-aff7-141827a12678\">\n",
+              "  <div id=\"df-a165b73c-d34b-481e-98d5-4385970d2e2b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -576,7 +578,7 @@
               "</table>\n",
               "<p>7043 rows × 21 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c28367ee-f478-40b1-aff7-141827a12678')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a165b73c-d34b-481e-98d5-4385970d2e2b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -627,12 +629,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c28367ee-f478-40b1-aff7-141827a12678 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a165b73c-d34b-481e-98d5-4385970d2e2b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c28367ee-f478-40b1-aff7-141827a12678');\n",
+              "          const element = document.querySelector('#df-a165b73c-d34b-481e-98d5-4385970d2e2b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -655,6 +657,53 @@
             ]
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "churn.dtypes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "85UtrgczlaLD",
+        "outputId": "f7ddb3c0-fdcd-4ce6-f8c4-24c77d8b7e3b"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "customerID           object\n",
+              "gender               object\n",
+              "SeniorCitizen         int64\n",
+              "Partner              object\n",
+              "Dependents           object\n",
+              "tenure                int64\n",
+              "PhoneService         object\n",
+              "MultipleLines        object\n",
+              "InternetService      object\n",
+              "OnlineSecurity       object\n",
+              "OnlineBackup         object\n",
+              "DeviceProtection     object\n",
+              "TechSupport          object\n",
+              "StreamingTV          object\n",
+              "StreamingMovies      object\n",
+              "Contract             object\n",
+              "PaperlessBilling     object\n",
+              "PaymentMethod        object\n",
+              "MonthlyCharges      float64\n",
+              "TotalCharges         object\n",
+              "Churn                object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
         }
       ]
     },
@@ -688,7 +737,7 @@
       "metadata": {
         "id": "ZJha__DCwBMh"
       },
-      "execution_count": 18,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -723,9 +772,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "dfc43a7a-94ab-446a-ad3f-b80dcfd819f9"
+        "outputId": "9c6d3c30-a3fc-4e3b-e3c3-4ace0558ca7d"
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +797,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-68f2427a-83b8-4300-9a19-bc6237698c32\">\n",
+              "  <div id=\"df-9bfc2b6f-d6b9-42a6-af74-1450cfd697c8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -844,7 +893,7 @@
               "</table>\n",
               "<p>7043 rows × 3 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-68f2427a-83b8-4300-9a19-bc6237698c32')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9bfc2b6f-d6b9-42a6-af74-1450cfd697c8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -895,12 +944,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-68f2427a-83b8-4300-9a19-bc6237698c32 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9bfc2b6f-d6b9-42a6-af74-1450cfd697c8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-68f2427a-83b8-4300-9a19-bc6237698c32');\n",
+              "          const element = document.querySelector('#df-9bfc2b6f-d6b9-42a6-af74-1450cfd697c8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -923,7 +972,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 28
         }
       ]
     },
@@ -944,9 +993,9 @@
           "height": 475
         },
         "id": "GW4Q-cP7A2KE",
-        "outputId": "7505ce86-e516-4cb7-d77c-586e75db4d57"
+        "outputId": "3c827265-25d0-44e7-aebe-bc821e5eee83"
       },
-      "execution_count": 15,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
